# te_tmp

./: .gitignore  README.md  install.sh  run_tp_overlap_ut.sh  setup.py
build_tools/: pytorch_musa.py  utils.py
tests/musa/operators/: test_cast.py  test_gemm.py  test_numerics.py  test_rms_norm.py  test_transpose.py
tests/pytorch/: test_fused_router.py  test_fused_router_perf.py
tests/pytorch/distributed/: run_gemm_with_overlap.py
transformer_engine/: __init__.py
transformer_engine/common/: __init__.py  common.h
transformer_engine/common/transpose/: multi_cast_transpose.cu
transformer_engine/musa/: __init__.py
transformer_engine/musa/common/: CMakeLists.txt  common.h  common.mu  nvtx.h  transformer_engine.cpp  utils.muh
transformer_engine/musa/common/activation/: activation_template.h  gelu.mu  relu.mu  swiglu.mu
transformer_engine/musa/common/comm_gemm_overlap/: comm_gemm_overlap.cpp
transformer_engine/musa/common/comm_gemm_overlap/userbuffers/: ipcsocket.cc  ipcsocket.h  userbuffers-host.cpp  userbuffers.h  userbuffers.mu
transformer_engine/musa/common/fused_attn/: fused_attn.cpp  thd_utils.h  thd_utils.mu
transformer_engine/musa/common/fused_rope/: fused_rope.mu
transformer_engine/musa/common/fused_router/: fused_moe_aux_loss.mu  fused_score_for_moe_aux_loss.mu  fused_topk_with_score_function.mu  utils.h
transformer_engine/musa/common/fused_softmax/: scaled_aligned_causal_masked_softmax.mu  scaled_masked_softmax.mu  scaled_upper_triang_masked_softmax.mu
transformer_engine/musa/common/gemm/: mudnn_gemm.cpp
transformer_engine/musa/common/include/transformer_engine/: activation.h  cast.h  cast_transpose_noop.h  comm_gemm_overlap.h  fused_attn.h  fused_rope.h  fused_router.h  gemm.h  normalization.h  padding.h  permutation.h  recipe.h  softmax.h  swizzle.h  transformer_engine.h  transpose.h
transformer_engine/musa/common/permutation/: permutation.mu  permutation_mask.mu
transformer_engine/musa/common/recipe/: delayed_scaling.mu  recipe_common.muh
transformer_engine/musa/common/swizzle/: swizzle.mu
transformer_engine/musa/common/transpose/: cast_transpose.h  cast_transpose.mu  cast_transpose_fusion.mu  multi_cast_transpose.mu  transpose.mu  transpose_fusion.mu
transformer_engine/musa/common/transpose/rtc/: cast_transpose.mu  cast_transpose_fusion.mu  transpose.mu
transformer_engine/musa/common/util/: cast.mu  cast_gated_kernels.muh  cast_kernels.muh  dequantize_kernels.muh  logging.h  math.h  mtfp8_blockwise_quantize.muh  mtfp8_cast.muh  mtfp8_cast_transpose.h  mtfp8_cast_transpose.mu  mtfp8_dequantize.mu  mtfp8_groupwise_quantize.muh  mtfp8_utils.muh  mudnn.h  musa_driver.cpp  musa_driver.h  musa_runtime.cpp  musa_runtime.h  padding.mu  pybind_helper.h  rtc.cpp  rtc.h  string.h  string_header.h.in  system.cpp  system.h  vectorized_pointwise.h
transformer_engine/musa/pytorch/: attention.py  distributed.py  fp8.py  utils.py
transformer_engine/musa/pytorch/cpp_extensions/: cast.py
transformer_engine/musa/pytorch/csrc/: common.cpp  common.h  extensions.h  multi_tensor_apply.muh  pybind.h  type_shim.h  util.h
transformer_engine/musa/pytorch/csrc/extensions/: activation.cpp  apply_rope.cpp  attention.mu  bias.cpp  cast.cpp  comm_gemm_overlap.cpp  fp8_block_scaling_partial_cast.mu  gemm.cpp  misc.cpp  normalization.cpp  padding.cpp  permutation.mu  pybind.cpp  quantizer.cpp  recipe.cpp  router.cpp  softmax.cpp  swizzle.cpp  transpose.cpp  type_converters.cpp  util.cpp
transformer_engine/musa/pytorch/csrc/extensions/multi_tensor/: multi_tensor_adam.mu  multi_tensor_compute_scale.mu  multi_tensor_l2norm_kernel.mu  multi_tensor_scale_kernel.mu  multi_tensor_sgd_kernel.mu
transformer_engine/musa/pytorch/module/: base.py  grouped_linear.py  linear.py
transformer_engine/musa/pytorch/ops/: op.py
transformer_engine/musa/pytorch/tensor/: __init__.py  mtfp8_tensor.py  mtfp8_tensor_base.py
transformer_engine/pytorch/: attention.py  cpu_offload.py  cross_entropy.py  distributed.py  fp8.py  permutation.py  router.py  utils.py
transformer_engine/pytorch/csrc/: pybind.h
transformer_engine/pytorch/module/: base.py  grouped_linear.py  layernorm_linear.py  layernorm_mlp.py  linear.py
transformer_engine/pytorch/tensor/: float8_tensor.py  quantized_tensor.py  utils.py
transformer_engine/pytorch/triton/: __init__.py  cross_entropy.py  permutation.py
